--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,7 +32,7 @@
     <form name="contact" netlify>
         <div class="field">
             <div class="control has-icons-right">
-                <input class="input" type="email" placeholder="Your Email" value="">
+                <input class="input" name="email" type="email" placeholder="Your Email" value="">
                 <span class="icon is-small is-right">
                     <i class="fas fa-exclamation-triangle"></i>
                 </span>
@@ -41,7 +41,7 @@
         </div>
         <div class="field">
             <div class="control">
-                <textarea class="textarea" placeholder="Message and optional contact number"></textarea>
+                <textarea class="textarea" name="message" placeholder="Message and optional contact number"></textarea>
             </div>
         </div>
         <div class="field">
