--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,34 +1,46 @@
-<div class="column is-two-third-desktop">
-    <p class="has-text-weight-bold is-size-4">
-        What can I do for you?
-    </p>
+<div>
+    
+        <div class="section-title title-font">What can I do for you?</div>
 
     <div class="bullet-point">
-        <img src="./media/checked.svg" alt="bullet-point"> Build a complete Design system, UX and/or UI Solution for
-        your
-        product
-        idea
+        <dt>
+            <img src="./media/tick.svg" alt="bullet-point"> Design complete UX & UI
+        </dt>
+        <dd>Build a complete Design system, UX and/or UI Solution for your product idea and your backend</dd>
     </div>
     <div class="bullet-point">
-        <img src="./media/checked.svg" alt="bullet-point"> Review your existing UI comprehensively and create UX
-        improvements plan & guidelines
+        <dt> 
+            <img src="./media/tick.svg" alt="bullet-point"> Usability review of your app
+        </dt>
+        <dd>Review your existing UI comprehensively and create UX improvements plan & guidelines</dd>
     </div>
     <div class="bullet-point">
-        <img src="./media/checked.svg" alt="bullet-point"> Work with your team to optimize your existing CSS
-        architecture
+        <dt>
+            <img src="./media/tick.svg" alt="bullet-point"> CSS Refactoring
+        </dt>
+        <dd>Work with your team to optimize your existing CSS architecture</dd>
     </div>
     <div class="bullet-point">
-        <img src="./media/checked.svg" alt="bullet-point"> Work with your team to optimize UI performance
+        <dt>
+            <img src="./media/tick.svg" alt="bullet-point"> Performance Refactoring
+        </dt>
+        <dd>Work with your team to optimize UI performance</dd>
     </div>
     <div class="bullet-point">
-        <img src="./media/checked.svg" alt="bullet-point"> Train your team in Javascript/React/Angular/NodeJS/CSS
-        and other frontend technologies
+        <dt>
+            <img src="./media/tick.svg" alt="bullet-point"> Frontend Training
+        </dt>
+        <dd>Train your team in Javascript/React/Angular/NodeJS/CSS and other frontend technologies</dd>
     </div>
     <div class="bullet-point">
-        <img src="./media/checked.svg" alt="bullet-point">Grab a quick coffee with you!
+        <dt>
+            <img src="./media/coffee.svg" alt="bullet-point"> Grab a cup coffee with you!
+        </dt>
+        <dd>'Nuff Said!</dd>
     </div>
 </div>
-<div class="column is-one-third-desktop">
+<div style="margin:4rem 0;">
+    <div class="section-title title-font">Contact</div>
     <form name="contact" netlify>
         <div class="field">
             <div class="control has-icons-right">
