--- a/pages/short-about.html
+++ b/pages/short-about.html
@@ -2,10 +2,10 @@
   <img src="./media/profile_pic_medium.jpg" alt="profile-pic" />
 </div>
 <div class="column is-two-third-desktop">
-  <p class="has-text-weight-bold is-size-2 title-font">Hi! I am Nitin.</p>
+  <p class="has-text-weight-bold is-size-2 title-font">Hi.</p>
   <p>
-    I am multi‑disciplinary designer and a fullstack Javascript developer,
-    specializing in
+    I am Nitin. I am a multi‑disciplinary designer and a fullstack Javascript
+    developer, specializing in
     <span class="has-text-weight-bold">frontend design & development</span>
     based out of Pune, India.
   </p>
