--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,7 +58,7 @@
         </div>
         <div class="field">
             <div class="control">
-                <input type="submit" class="button is-info is-fullwidth"></input>
+                <input type="submit" id="submitContactButton" class="button is-info is-fullwidth" disabled></input>
             </div>
         </div>
     </form>
