--- a/index.html
+++ b/index.html
@@ -20,50 +20,7 @@
 
   <body>
     <div class="main-header-container">
-      <header class="container">
-        <nav class="navbar" role="navigation" aria-label="main navigation">
-          <div class="navbar-brand">
-            <div class="navbar-item">
-              <a class="logo-main-text inline-block" href="/"> NJ </a>
-              <div style="margin-left:1rem;" class="flex">
-                <div style="font-weight: bold;">NITIN JADHAV</div>
-                <div style="font-weight: 200;">Designer & Developer</div>
-              </div>
-            </div>
-
-            <a
-              role="button"
-              class="navbar-burger burger"
-              aria-label="menu"
-              aria-expanded="false"
-              data-target="navbarBasicExample"
-            >
-              <span aria-hidden="true"></span> <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-            </a>
-          </div>
-
-          <div id="navbarBasicExample" class="navbar-menu title-font">
-            <div class="navbar-end">
-              <!--
-                <a class="navbar-item">
-                Projects
-                </a>
-              -->
-              <a class="navbar-item" href="https://medium.com/@nitinj">
-                Blog
-              </a>
-              <a
-                class="navbar-item"
-                href="https://www.behance.net/nitinjadhav-ux"
-              >
-                UX Portfolio
-              </a>
-              <a class="navbar-item" href="/#contact"> Contact </a>
-            </div>
-          </div>
-        </nav>
-      </header>
+      <include src="./pages/header.html"></include>
       <section id="hero" class="section page">
         <content class="container dark-panel columns">
           <include src="./pages/short-about.html"></include>
