--- a/index.html
+++ b/index.html
@@ -14,22 +14,20 @@
       <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/fontawesome.js" integrity="sha384-bNOdVeWbABef8Lh4uZ8c3lJXVlHdf8W5hh1OpJ4dGyqIEhMmcnJrosjQ36Kniaqm"
         crossorigin="anonymous" defer></script>
     -->
-
-    <script src="index.js"></script>
   </head>
 
   <body>
-    <div class="main-header-container">
-      <include src="./pages/header.html"></include>
-      <section id="hero" class="section page">
+    <section class="section main-section page page--dark main-header-container">
+      <include src="./src/pages/header.html"></include>
+      <section id="hero" class="section">
         <content class="container dark-panel columns">
-          <include src="./pages/short-about.html"></include>
+          <include src="./src/pages/short-about.html"></include>
         </content>
       </section>
-    </div>
-    <section id="contact" class="section page page--dark ">
+    </section>
+    <section id="contact" class="section main-section page page--dark ">
       <content class="container dark-panel">
-        <include src="./pages/contact.html"></include>
+        <include src="./src/pages/contact.html"></include>
       </content>
     </section>
 
@@ -41,5 +39,6 @@
         </p>
       </div>
     </footer>
+    <script src="./src/index.js"></script>
   </body>
 </html>
