--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -1,59 +1,31 @@
 <div class="container mx-auto text-grey pt-8">
-  <!-- <div class="font-light text-sm py-2">About</div> -->
   <div class="flex flex-col md:flex-row items-center">
     <div class="relative">
-      <div class="profile-pic-shadow absolute rounded-full h-32 w-32 "></div>
+      <div class="profile-pic-shadow absolute h-32 w-32 rounded-full"></div>
       <img
-        class="profile-pic rounded-full h-32 w-32"
+        class="profile-pic h-32 w-32 rounded-full"
         src="media/profile_pic_small.jpg"
         alt="profile-pic"
       />
     </div>
-    <div class="md:ml-8 flex-1 flex justify-around">
-      <a href="#">
+    <div class="md:ml-8 flex-1">
+      <div>
+        Want to talk to me? Use above contact form, it works! or
+        <a href="mailto:nitinjadhav@gmail.com">email me here</a>.
+      </div>
+    </div>
+    <!-- icons here -->
+    <div>
+      <a href="https://stackoverflow.com/users/741251/nitin-jadhav">
         <img
-          class="h-12 w-12 mx-2"
-          src="./media/social-icons/gmail_1220340.svg"
-          alt=""
-        />
-      </a>
-      <a href="#">
-        <img
-          class="h-12 w-12 mx-2"
-          src="./media/social-icons/001-twitter.svg"
-          alt=""
-        />
-      </a>
-      <a href="#">
-        <img
-          class="h-12 w-12 mx-2"
-          src="./media/social-icons/005-behance.svg"
-          alt=""
-        />
-      </a>
-      <a href="#">
-        <img
-          class="h-12 w-12 mx-2"
-          src="./media/social-icons/004-github.svg"
-          alt=""
-        />
-      </a>
-      <a href="#">
-        <img
-          class="h-12 w-12 mx-2"
-          src="./media/social-icons/003-linkedin.svg"
-          alt=""
-        />
-      </a>
-      <a href="#">
-        <img
-          class="h-12 w-12 mx-2"
-          src="./media/social-icons/006-instagram.svg"
-          alt=""
+          src="https://stackoverflow.com/users/flair/741251.png"
+          width="208"
+          height="58"
+          alt="profile for Nitin Jadhav at Stack Overflow, Q&amp;A for professional and enthusiast programmers"
+          title="profile for Nitin Jadhav at Stack Overflow, Q&amp;A for professional and enthusiast programmers"
         />
       </a>
     </div>
-    <!-- <div class="md:ml-8 flex-1">text</div> -->
   </div>
   <div class="text-xs py-8 text-center">
     <p>
