--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -1,37 +1,9 @@
-<nav class="container mx-auto flex justify-between flex-wrap">
+<nav class="container mx-auto flex justify-between flex-wrap select-none">
   <div class="flex">
     <div class="logo-main-text mr-2">NJ</div>
-    <div class="flex flex-col text-l text-purple-lighter">
+    <div class="flex flex-col text-l text-blue-dark">
       <div class="flex-1 font-bold">Nitin Jadhav</div>
       <div class="flex-1 font-light">Designer & Developer</div>
     </div>
-  </div>
-  <div class="block lg:hidden" id="hamburger-icon">
-    <span></span> <span></span> <span></span> <span></span>
-  </div>
-  <div
-    id="menu-items"
-    class="hidden w-full block flex-grow lg:flex lg:justify-end lg:items-center lg:w-auto font-bold"
-  >
-    <a
-      target="_blank"
-      href="https://medium.com/@nitinj"
-      class="block mt-4 lg:inline-block lg:mt-0 mr-4 text-white hover:text-blue-lighter"
-    >
-      Blog
-    </a>
-    <a
-      target="_blank"
-      href="https://www.behance.net/nitinjadhav-ux"
-      class="block mt-4 lg:inline-block lg:mt-0 mr-4 text-white hover:text-blue-lighter"
-    >
-      UX Portfolio
-    </a>
-    <a
-      href="/#contact"
-      class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-blue-lighter"
-    >
-      Contact
-    </a>
   </div>
 </nav>
