--- a/src/pages/hero.html
+++ b/src/pages/hero.html
@@ -1,35 +1,103 @@
-<div class="container mx-auto py-12 text-white">
-  <p class="text-4xl leading-loose">Hi.</p>
-  <p>
-    I am Nitin. I am a multi‑disciplinary designer and a fullstack Javascript
-    developer, specializing in
-    <strong>frontend design & development</strong> based out of Pune, India.
-  </p>
-  <p>
-    I am deeply passionate about user experience. I love designing polished UIs
-    for products using cutting-edge tech. I have worked on multiple UX design
-    projects, and few product design projects.
-  </p>
-  <p>
-    I care about accessibility and performance: for me, performance is THE
-    experience. <br />
-  </p>
-  <p>
-    I am currently working with QIO Technologies at Pune (a UK based company).
-  </p>
-  <br />
-  <p>
-    Say hi on <a href="https://twitter.com/_nitinj">Twitter</a> &#8226;
-    <a href="https://www.linkedin.com/in/nitin-jadhav-23927aa/"> Linkedin </a>
-    &#8226; <a href="https://medium.com/@nitinj">Blog @ Medium</a>
-  </p>
+<div
+  class="container mx-auto py-12 text-blue-dark h-full flex flex-col justify-around lg:w-2/5 w-2/3"
+>
+  <div>
+    <p class="capital-font leading-loose" style="font-size: 4rem;">Hi.</p>
+    <p>
+      I am Nitin. I am a multi‑disciplinary designer and a fullstack Javascript
+      developer, specializing in
+      <strong>frontend design & development</strong> based out of Pune, India.
+    </p>
+    <p>
+      I am deeply passionate about user experience. I love designing polished
+      UIs for products using cutting-edge tech. I have worked on multiple UX
+      design projects, and few product design projects.
+    </p>
+    <p>
+      I care about accessibility and performance: for me, performance is THE
+      experience. <br />
+    </p>
+    <p>
+      I am currently working with QIO Technologies at Pune (a UK based company).
+    </p>
+    <br />
+    <div class="hero-links">
+      <!-- <a href="https://twitter.com/_nitinj">Twitter</a> &#8226;
+      <a href="https://www.linkedin.com/in/nitin-jadhav-23927aa/"> Linkedin </a> -->
+
+      <a target="_blank" href="https://medium.com/@nitinj">Blog @ Medium</a>
+      <span class="text-grey-light">&#8226;</span>
+      <a target="_blank" href="https://www.behance.net/nitinjadhav-ux"
+        >Behance Portfolio</a
+      >
+      <span class="text-grey-light">&#8226;</span>
+      <!-- <a target="_blank" href="src/pages/resume.html">Resume</a> -->
+    </div>
+
+    <div class="flex my-8 ">
+      <a target="_blank" href="https://twitter.com/codenitin">
+        <img
+          class="h-6 w-6 mr-2"
+          src="./media/social-icons/03-twitter.svg"
+          alt=""
+        />
+      </a>
+      <span class="text-grey-light">&#8226;</span>
+      <a
+        target="_blank"
+        href="https://www.linkedin.com/in/nitin-jadhav-23927aa/"
+      >
+        <img
+          class="h-6 w-6 mx-2"
+          src="./media/social-icons/11-linkedin.svg"
+          alt=""
+        />
+      </a>
+      <span class="text-grey-light">&#8226;</span>
+      <a target="_blank" href="https://github.com/nitinja">
+        <img
+          class="h-6 w-6 mx-2"
+          src="./media/social-icons/41-github.svg"
+          alt=""
+        />
+      </a>
+      <span class="text-grey-light">&#8226;</span>
+      <a
+        target="_blank"
+        href="https://stackoverflow.com/users/741251/nitin-jadhav"
+      >
+        <img
+          class="h-6 w-6 mx-2"
+          src="./media/social-icons/42-stackoverflow.svg"
+          alt=""
+        />
+      </a>
+      <span class="text-grey-light">&#8226;</span>
+      <a target="_blank" href="http://behance.net/nitinjadhav-ux">
+        <img
+          class="h-6 w-6 mx-2"
+          src="./media/social-icons/37-behance.svg"
+          alt=""
+        />
+      </a>
+      <span class="text-grey-light">&#8226;</span>
+      <a target="_blank" href="https://www.instagram.com/nitinjadhav466/">
+        <img
+          class="h-6 w-6 mx-2"
+          src="./media/social-icons/38-instagram.svg"
+          alt=""
+        />
+      </a>
+      <!-- <span class="text-grey-light">&#8226;</span>
+      <a href="#">
+        <img
+          class="h-6 w-6 mx-2"
+          src="./media/social-icons/53-medium.svg"
+          alt=""
+        />
+      </a> -->
+    </div>
+
+    <div class="my-4"></div>
+  </div>
 </div>
-
-<!--
-  <div class="column is-one-third-desktop profile-pic-container">
-    <img src="./media/profile_pic_medium.jpg" alt="profile-pic" />
-  </div>
-  <div class="column is-two-third-desktop">
-
-  </div>
--->
