Fixed sosm links and footer

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -4,21 +4,19 @@
   </div>
   <div class="bullet-point">
     <dt>
-      <img src="./media/tick.svg" alt="bullet-point" /> Design complete UX & UI
-    </dt>
-    <dd>
-      Build a complete Design system, UX and/or UI Solution for your product
-      idea and your backend
-    </dd>
-  </div>
-  <div class="bullet-point">
-    <dt>
       <img src="./media/tick.svg" alt="bullet-point" /> Usability review of your
       app
     </dt>
     <dd>
-      Review your existing UI comprehensively and create UX improvements plan &
-      guidelines
+      Review your existing UI comprehensively and provide feedback and
+      suggestions for improvements (I might do it for free!)
+    </dd>
+  </div>
+  <div class="bullet-point">
+    <dt><img src="./media/tick.svg" alt="bullet-point" /> Design System</dt>
+    <dd>
+      Build a complete Design system for your product including styleguide and
+      UI projects setup, responsive layout
     </dd>
   </div>
   <div class="bullet-point">
@@ -34,7 +32,7 @@
   <div class="bullet-point">
     <dt><img src="./media/tick.svg" alt="bullet-point" /> Frontend Training</dt>
     <dd>
-      Train your team in Javascript/React/Angular/NodeJS/CSS and other frontend
+      Train your team in Core Javascript/React/Angular/CSS and other frontend
       technologies
     </dd>
   </div>
