--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto text-grey pt-8">
-  <div class="flex flex-col md:flex-row items-center">
-    <div class="relative">
+  <div class="flex flex-col md:flex-col items-center">
+    <div class="relative mb-10">
       <div class="profile-pic-shadow absolute h-32 w-32 rounded-full"></div>
       <img
         class="profile-pic h-32 w-32 rounded-full"
@@ -8,9 +8,9 @@
         alt="profile-pic"
       />
     </div>
-    <div class="md:ml-8 flex-1">
+    <div class="mb-10 flex-1">
       <div>
-        Want to talk to me? Use above contact form, it works! or
+        Want to talk? Use above contact form, it works! or
         <a href="mailto:nitinjadhav@gmail.com">email me here</a>.
       </div>
     </div>
