--- a/src/pages/hero.html
+++ b/src/pages/hero.html
@@ -22,16 +22,7 @@
     </p>
     <br />
     <div class="hero-links">
-      <!-- <a href="https://twitter.com/_nitinj">Twitter</a> &#8226;
-      <a href="https://www.linkedin.com/in/nitin-jadhav-23927aa/"> Linkedin </a> -->
-
-      <a target="_blank" href="https://medium.com/@nitinj">Blog @ Medium</a>
-      <span class="text-grey-light">&#8226;</span>
-      <a target="_blank" href="https://www.behance.net/nitinjadhav-ux"
-        >Behance Portfolio</a
-      >
-      <span class="text-grey-light">&#8226;</span>
-      <!-- <a target="_blank" href="src/pages/resume.html">Resume</a> -->
+      <a target="_blank" href="https://medium.com/@nitinj">My Blog</a>
     </div>
 
     <div class="flex my-8 ">
@@ -72,14 +63,7 @@
           alt=""
         />
       </a>
-      <span class="text-grey-light">&#8226;</span>
-      <a target="_blank" href="http://behance.net/nitinjadhav-ux">
-        <img
-          class="h-6 w-6 mx-2"
-          src="./media/social-icons/37-behance.svg"
-          alt=""
-        />
-      </a>
+
       <span class="text-grey-light">&#8226;</span>
       <a target="_blank" href="https://www.instagram.com/nitinjadhav466/">
         <img
